--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,5 @@
 {
   "version": 2,
   "project": "gh-repos",
-  "alias": ["gh-repos"],
-  "env": {
-    "NODE_ENV": "production",
-    "EVENTS_URL": "@prod_slack_events_url",
-    "ERRORS_URL": "@prod_slack_errors_url",
-    "GITHUB_API_KEY": "@palmerbot-github-api-key"
-  }
+  "alias": ["gh-repos"]
 }
