--- a/package.json
+++ b/package.json
@@ -3,31 +3,10 @@
   "private": true,
   "version": "2.1.2",
   "scripts": {
-    "start": "micro",
-    "dev": "micro-dev",
-    "test": "xo"
-  },
-  "xo": {
-    "esnext": true,
-    "space": true,
-    "semicolon": false,
-    "rules": {
-      "camelcase": 0
-    }
-  },
-  "now": {
-    "env": {
-      "EVENTS_URL": "@prod_slack_events_url",
-      "ERRORS_URL": "@prod_slack_errors_url"
-    }
+    "dev": "now dev"
   },
   "dependencies": {
-    "micro": "9.0.2",
     "ms": "2.1.1",
     "node-fetch": "1.7.3"
-  },
-  "devDependencies": {
-    "micro-dev": "2.0.0",
-    "xo": "0.18.2"
   }
 }
